--- a/model.env
+++ b/model.env
@@ -1,7 +1,9 @@
-EVENT_OPENING_TIME = 
+#Format YYYY-MM-DD HH-MM
+EVENT_OPENING_TIME = 2019-02-17 19:00
 EMAIL = 
 PASSWORD = 
-EVENT_URL = 
+#Format https://bde.polytechmontpellier.fr/Event/bookEvent/XX where XX is event ID, this can be found on the website using the browser console and searching through the html
+EVENT_URL = https://bde.polytechmontpellier.fr/Event/bookEvent/89
 #Optional value
 #Unit : minute, Default 1 
 MINUTES_BEFORE_AND_AFTER = 
