reservation bus + handle multiple accounts

--- a/model.env
+++ b/model.env
@@ -1,11 +1,11 @@
 #Format YYYY-MM-DD HH-MM
-EVENT_OPENING_TIME = 2019-02-17 19:00
-EMAIL = 
-PASSWORD = 
+EVENT_OPENING_TIME=2019-11-24 20:00
+
 #Format https://bde.polytechmontpellier.fr/Event/bookEvent/XX where XX is event ID, this can be found on the website using the browser console and searching through the html
-EVENT_URL = https://bde.polytechmontpellier.fr/Event/bookEvent/89
+EVENT_URL=https://bde.polytechmontpellier.fr/Event/bookEvent/121
+
 #Optional value
 #Unit : minute, Default 1 
-MINUTES_BEFORE_AND_AFTER = 
+MINUTES_BEFORE_AND_AFTER=
 #Unit : milliseconds, Default 500
 INTERVAL_BETWEEN_REQUEST = 
